--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,12 @@
 @import 'variables';
+@import 'slider';
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 html {
   font-size: $font-size;
@@ -8,20 +16,38 @@ html {
   line-height: 1.4;
 }
 
+ul,
+ol,
+li {
+  list-style: none;
+}
+
 body {
-  margin: auto;
+  margin: 0;
+  padding: 0;
   text-align: center;
   max-width: $page-width;
-}
+  width: 100%;
+  min-height: 100vh; 
+  overflow-x: hidden;
 
-h1 {
-  margin: 0 0 2rem;
-}
+  main {
+    width: 100%;
 
-.image {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  background-size: cover;
-}
+    #weather-slider {
+      background-color: blue;
+      
 
+
+      .city__forecast {
+        &-inner {
+          display: inline-flex;
+
+          .forecast__day {
+            // max-width: 20%;
+          }
+        }
+      }
+    }
+  }
+}
