--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -13,6 +13,7 @@
         display: flex;
         flex-flow: row;
         transition: transform 300ms ease-in-out;
+        height: 100%;
         
         .slider__slide {
             width: 100%;
@@ -23,15 +24,50 @@
         }
     }
 
-    .slider__pagination {}
-    
-    .slider__navigation {
+    .slider__pagination {
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
 
+        .dot__list {
+            display: flex;
+            flex-flow: row;
+            
+            .dot__item {
+                cursor: pointer;
+                padding: 1rem .5rem;
+                transition: background-color 120ms;
+                
+                &::after {
+                    content: '';
+                    display: block;
+                    position: relative;
+                    width: 8px;
+                    aspect-ratio: 1 / 1;
+                    border-radius: 50%;
+                    background-color: transparent;
+                    border: 1px solid white;
+                }
+    
+                &.is__active {
+                    &::after {
+                        background-color: white;
+                    }
+                }
+            }
+        }
+    }
+
+    .slider__navigation {
+        width: 100%;
+        
         .next,
         .prev {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+
             &::after {
                 content: ">";
                 position: relative;
@@ -39,6 +75,16 @@
                 width: 30px;
                 aspect-ratio: 1/1;
                 z-index: 300;
+            }
+        }
+        
+        .next {
+            right: 0;
+        }
+        .prev {
+            left: 0;
+            &::after {
+                content: "<";
             }
         }
     }
