--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 
 $breakpoint__mobile: 768px;
 $breakpoint__mobile-ex: $breakpoint__mobile - 1px;
+$breakpoint__mobile-v: 812px;
 
 $gap: 1.25rem;
 
